Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-14491

Input events can be recorded but aren't saved to .qtd files

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • Qt Creator 3.4.1
    • Qt Creator 3.4.0, Qt Creator 3.4.1
    • QML Profiler
    • None
    • 243b2724353fec7ffceb5898794d0ddded3354a1

      Apparently the save/load mechanism isn't implemented for Key and Mouse events.

        For Gerrit Dashboard: QTCREATORBUG-14491
        # Subject Branch Project Status CR V

            ulherman Ulf Hermann
            ulherman Ulf Hermann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes