QmlProfiler: save and load input events

Change-Id: Ibb70d98a6b2ceeb72059a7a421ce2e1a38233d87
Task-number: QTCREATORBUG-14491
Reviewed-by: Eike Ziller <eike.ziller@theqtcompany.com>
Reviewed-by: Joerg Bornemann <joerg.bornemann@theqtcompany.com>